package main.kotlin.core.domain.exception

class InvalidNameException :
    DomainException("El nombre no puede estar vacío")
